--- a/share/html/index.tt
+++ b/share/html/index.tt
@@ -31,8 +31,8 @@
         <tr>
           <td class="total_answers">0</td>
           <td class="title">0</td>
-          <td class="asked_by">0</td>
-          <td class="asked_on">0</td>
+          <td class="person_asked_by_handle">0</td>
+          <td><span class="asked_on_dmy">0</span> <span class="asked_on_hms">0</span></td>
        </tr>
       </tbody>
     </table>
